CommentList: prevent shoot out of layout on small screens

--- a/src/Comments/CommentList/style.module.css
+++ b/src/Comments/CommentList/style.module.css
@@ -10,3 +10,7 @@
     font-size: var(--fontSizeS);
     margin-bottom: 0.5rem;
 }
+
+.linkContainer {
+    min-width: 0;
+}
